add API Categories CRUD, with Swagger docs
